# tts-tools

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
board-splitter/: index.html  package.json
board-splitter/src/: App.css  App.jsx
docs/: ANALYSIS_INDEX.txt  ARCS_VALIDATION_SESSION.md  BOARD_PDF_GUIDE.md  CLANK_LEGACY_SPRITE_ANALYSIS.md  CLANK_LEGACY_TEST_RESULTS.md  COMPOSITE_DECK_KEYS_AND_TILE_LAYOUT.md  DOCUMENTATION_UPDATES.md  PRINTING_GUIDE.md  PRINTING_GUIDE_V2.md  PROJECT_SUMMARY.md  README.md  SPRITE_SHEETS_EXPLAINED.md  TILES_AND_BOARDS.md  TILES_IMPLEMENTATION.md  TOKEN_PACKING.md  TTS_CARD_SCALING_MYSTERY_SOLVED.md  TTS_JSON_STRUCTURE.md  TTS_SCALING_SOLVED.md  TTS_UNIFIED_SCALING_SYSTEM.md  TTS_WORKFLOW_ANALYSIS.md  WORKFLOW.md  analyze_tts_objects.py  extract_scripts.py  tts_analysis_report.txt  tts_analysis_summary.txt
src/: crop_board_sections.py  download_tts_assets.py  extract_model_textures.py  extract_sprites.py  extract_tiles.py  generate_board_pdf.py  generate_deck_from_json.py  generate_model_textures_pdf.py  generate_tiles_pdf.py  generate_tiles_pdf_v2.py  steam_workshop_api.py  steam_workshop_downloader.py  tts_deserializer.py
