[project]
name = "tts-tools"
version = "1.0.0"
description = "Complete toolkit for Tabletop Simulator mod processing - from Steam Workshop to printable PDFs"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
tts-download = "src.steam_workshop_downloader:main"
tts-deserialize = "src.tts_deserializer:main"
tts-assets = "src.download_tts_assets:main"
tts-extract-sprites = "src.extract_sprites:main"
tts-generate-pdf = "src.generate_deck_from_json:main"
